# sith

./: Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: #-test_case----bug-report.md  #-test_case----enhancement-request.md  #-test_case----feature-request.md  #-test_suite----bug-report.md  #-test_suite----enhancement-request.md  #-test_suite----feature-request.md  bug.md  enhancement.md  feature.md
.github/workflows/: build.yml  check.yml
examples/: basic_suite.rs  test_cases.rs
src/: common.rs  lib.rs
src/core/: mod.rs
src/core/params/: init.rs  mod.rs  name.rs  setup.rs  teardown.rs
src/core/params/with/: assignment.rs  mod.rs  verbatim.rs
src/core/test_case/: mod.rs
src/core/test_case/args/: mod.rs  with.rs
src/core/test_suite/: args.rs  mod.rs
tests/: test_case.rs  test_suite.rs
